--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://zarutskaalina.github.io/project-js-drinkify",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-js-drinkify/"
+    "build": "parcel build src/*.html --public-url /js_89_zarutskaalina/"
   },
   "repository": {
     "type": "git",
